shortcode (citation sidenote)

--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="/css/partage.css" />
 <link rel="stylesheet" href="/css/zoom-images.css" />
 <link rel="stylesheet" href="/css/citations-marginales.css">
+<link rel="stylesheet" href="/css/citations.css">
  {% endif %}
 
 <!-- Auto detection of the RSS feed for RSS readers -->
