--- a/src/css/citations-marginales.css
+++ b/src/css/citations-marginales.css
@@ -21,14 +21,13 @@ span.sidenote {
   margin-right: -80%;
   width: 60%;
   position: relative;
-  text-indent: -0.1ex;
   &::before {
     /* Compteur automatique */
     content: counter(sidenote-counter);
     position: absolute;
     display: inline;
     top: -0.2rem;
-    left: -0.4rem;
+    left: -2ex;
     font-size: calc(0.75 * var(--step--2));
   }
 }
@@ -75,7 +74,7 @@ span.sidenote {
       counter-increment: sidenote-counter;
       content: counter(sidenote-counter);
       top: -0.2rem;
-      right: 0.4rem;
+      right: 0.05rem;
       font-size: calc(0.75 * var(--step--2));
     }
   }
