--- a/src/css/citations-marginales.css
+++ b/src/css/citations-marginales.css
@@ -2,7 +2,7 @@ article {
   counter-reset: sidenote-counter;
 }
 
-blockquote span.sidenote-caller-counter {
+blockquote sup.sidenote-caller-counter {
   position: relative;
   &::after {
     /* Compteur automatique */
@@ -77,5 +77,17 @@ span.sidenote {
       right: 0.05rem;
       font-size: calc(0.75 * var(--step--2));
     }
+  }
+}
+
+
+/* format mobile */
+@media (width < 1000px) {
+  span.sidenote {
+    float: unset;
+    display: block;
+    margin-right: unset;
+    width: unset;
+    margin-top: var(--rythme);
   }
 }
