fix(inline notes)

--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="/css/zoom-images.css" />
 <link rel="stylesheet" href="/css/citations-marginales.css">
 <link rel="stylesheet" href="/css/citations.css">
+<script defer src="/scripts/showInlineNote.js"></script>
  {% endif %}
 
 <!-- Auto detection of the RSS feed for RSS readers -->
