fix(footer CSS overflow)

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,7 +1,7 @@
 <address>
   <a
     href="mailto:teotime.pac@outlook.fr?subject=Demande de contact depuis teotimepacreau.fr"
-    >teotime.pac<span class="hidden">anti</span>&#64;<span class="hidden"
+    >teotime.pac<span style="display: none;">anti</span>&#64;<span class="hidden" style="display: none;"
       >spam</span
     >outlook.fr</a
   >
@@ -13,7 +13,7 @@
 <ul aria-label="Mes réseaux sociaux" id="links">
   <li>
     <a
-      class="social-footer"
+      
       href="https://github.com/teotimepacreau"
       target="_blank" rel="me"
     >
@@ -23,7 +23,7 @@
   </li>
   <li>
     <a
-      class="social-footer"
+      
       href="https://mastodon.design/@teotimepacreau"
       target="_blank" rel="me"
     >
@@ -33,7 +33,7 @@
   </li>
   <li>
     <a
-      class="social-footer"
+      
       href="https://www.linkedin.com/in/teotime-p-a1194b20a/"
       target="_blank" rel="me"
     >
@@ -45,11 +45,12 @@
 <ul aria-label="Scores de performance" id="stats">
   <li>
     <a
-      class="social-footer"
+      
       href="https://www.ecoindex.fr/resultat/?id=0b81b2d0-19ae-413a-8fcc-dac29c36ea9e"
       target="_blank"
       title="Consulter le score ecoindex de creasit.fr (nouvel onglet)"
-      >Score d'éco-conception <span class="ecoindex">B</span></a
+      id="eco-index"
+      >Score d'éco-conception <span id="ecoindex-score">B</span></a
     >
   </li>
 </ul>
