--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -17,14 +17,12 @@
 <link
   rel="alternate"
   href="/feed/feed.xml"
-  title="Flux RSS du blog de Téotime Pacreau"
+  title="Flux RSS du blog et des essais de Téotime Pacreau"
   type="application/atom+xml"
 />
 
 <!--Favicon-->
 <link rel="icon" href="/favicon/favicon.svg" />
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon.svg" />
-<link rel="mask-icon" href="/favicon/favicon.svg" />
 
 <!--Theme-->
 <meta
@@ -56,7 +54,7 @@
 <meta property="og:site_name" content="Téotime Pacreau" />
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ description }}" />
-<meta name="topic" content="Numérique, Nantes, web, développement, gestion de projet, management, UI, Indieweb, AMOA">
+<meta name="topic" content="Numérique, Nantes, web, développement, gestion de projet, management, UI, Indieweb, AMOA, conduite de projets numériques">
 <meta name="keywords" content="Numérique, Nantes, web, développement, frontend, backend, gestion de projet, management, UI, Indieweb, AMOA"/>
 <meta name="author" content="Téotime Pacreau" />
 <meta name="owner" content="Téotime Pacreau">
