plugin(img magnifier) & fix(colophon spacing)

--- a/src/_includes/blogpost_layout.njk
+++ b/src/_includes/blogpost_layout.njk
@@ -5,6 +5,7 @@ pageId: "blogpost"
 <html lang="fr">
   <head>
     {% include "head.njk"%}
+
   </head>
   <body>
     {% include "color-picker.html"%}
@@ -80,6 +81,6 @@ pageId: "blogpost"
     {% include "loadscripts.html"%}
     <script defer src="/scripts/table.js"></script>
     <script defer src="/scripts/share.js"></script>
-    <script defer src="/scripts/zoom-images.js"></script>
+    {% imgmagnifier %}
   </body>
 </html>
