--- a/src/css/style.css
+++ b/src/css/style.css
@@ -305,9 +305,7 @@ em {
 }
 
 p,
-li,
-code,
-pre {
+li {
   line-height: 1.5;
 }
 
@@ -772,7 +770,6 @@ a:hover {
   height: 1.4rem;
   aspect-ratio: 1;
   font-weight: 600;
-  line-height: 1.4;
 }
 
 /*---BLOG LIST PAGE---*/
