--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1626,23 +1626,23 @@ tr {
     contain-intrinsic-size: 100vh 60dvw;
     background-color: hsla(0, 0%, 42%, 0.3);
     backdrop-filter: blur(45px);
-    -webkit-backdrop-filter: blur(45px);
-    transition: transform .2s ease-out, opacity .2s ease-out,
-    display .2s ease-out;
+    transition: transform .1s ease-out, opacity .1s ease-out, display .1s ease-out;
     transition-behavior: allow-discrete;
     /*POPOVER IN EXIT STATE */
     opacity: 0;
-    transform: translateX(-50px);
-  }
-  #mobile-navigation[popover]:popover-open {
-    /*POPOVER BEFORE THE OPENING*/
-    @starting-style {
-      opacity: 0;
-      transform: translateX(-50px);
-    }
+    transform: translateX(-30vw);
+    
+    &:popover-open {
     /*POPOVER IN OPEN STATE*/
     opacity: 1;
-    transform: translateX(0px);
+    transform: none;
+
+      /*POPOVER BEFORE THE OPENING*/
+      @starting-style {
+        opacity: 0;
+        transform: translateX(-30vw);
+      }
+    }
   }
 
   #mobile-navigation ul {
