--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -1,13 +1,13 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="{{ description }}" />
 <link rel="stylesheet" href="/css/style.css" />
 
 {% if pageId == "blogpost" %} 
 <!-- STYLE FOR CODE BLOCKS -->
 <link rel="stylesheet" href="/css/prism-hopscotch.css" />
 <link rel="stylesheet" href="/css/partage.css" />
-<link rel="stylesheet" href="/css/zoom-images.css" />
 <link rel="stylesheet" href="/css/citations-marginales.css">
 <link rel="stylesheet" href="/css/citations.css">
 <script defer src="/scripts/showInlineNote.js"></script>
