fix(menu qui nn'appairait pas en desktop sur safari)

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,5 +1,5 @@
 <nav
-  {% if pageId == "blogpost" %}class="navigation-flexer navigation-flexer-post"{% elseif pageId == "Homepage" %}class="homepage-nav" data-visible="false"{% else %}class="navigation-flexer"{% endif %} 
+  {% if pageId == "blogpost" %}class="navigation-flexer navigation-flexer-post"{% elseif pageId == "Homepage" %}class="homepage-nav"{% else %}class="navigation-flexer"{% endif %} 
   id="primary-navigation"
   aria-label="Principale"
 >
