--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
@@ -216,9 +216,7 @@ eleventyComputed:
   opportunité réelle de fédérer les équipes autour d’un changement :
 </p>
 
-{% citationsmarginales "BORJA DE MOZOTA, Brigitte. <em>Quarante ans de recherche en design management : une revue de littérature et des pistes pour l’avenir.</em> Sciences du design n°7 : Design Management. Presses Universitaires de France, 2018, p.28-45" %}
-On nous apprend à valoriser les idées au-dessus de l’action, les choses spirituelles au dessus des choses matérielles, le conceptuel au-dessus du pragmatique et la logique au-dessus de l’intuition.
-{% endcitationsmarginales %}
+{% citationsmarginales "BORJA DE MOZOTA, Brigitte. <em>Quarante ans de recherche en design management : une revue de littérature et des pistes pour l’avenir.</em> Sciences du design n°7 : Design Management. Presses Universitaires de France, 2018, p.28-45" %}On nous apprend à valoriser les idées au-dessus de l’action, les choses spirituelles au dessus des choses matérielles, le conceptuel au-dessus du pragmatique et la logique au-dessus de l’intuition.{% endcitationsmarginales %}
 
 <h3 id="le-design-de-service-quest-ce-que-cest">
   Le design de services, qu’est-ce que c’est ?
@@ -332,9 +330,7 @@ On nous apprend à valoriser les idées au-dessus de l’action, les choses spir
     des indicateurs de suivi certifiant que le projet ne va pas dans le mur.
   </li>
 </ul>
-{% citationsmarginales "BORJA DE MOZOTA, Brigitte. <em>Quarante ans de recherche en design management : une revue de littérature et des pistes pour l’avenir.</em> Sciences du design n°7 : Design Management. Presses Universitaires de France, 2018, p.28-45" %}
-Le manque d’intérêt et même quelquefois le rejet par les designers du management et de la mesure de la valeur de leur activité. Or, en gestion, pour exister et être tangible, il faut mesurer. Dans la pratique, les designers auront tendance à se méfier du pouvoir des chiffres et à critiquer le business vu comme la seule recherche du profit à court terme.
-{% endcitationsmarginales %}
+{% citationsmarginales "BORJA DE MOZOTA, Brigitte. <em>Quarante ans de recherche en design management : une revue de littérature et des pistes pour l’avenir.</em> Sciences du design n°7 : Design Management. Presses Universitaires de France, 2018, p.28-45" %}Le manque d’intérêt et même quelquefois le rejet par les designers du management et de la mesure de la valeur de leur activité. Or, en gestion, pour exister et être tangible, il faut mesurer. Dans la pratique, les designers auront tendance à se méfier du pouvoir des chiffres et à critiquer le business vu comme la seule recherche du profit à court terme.{% endcitationsmarginales %}
 <p>On se retrouve alors avec des projets de design de service certes ancrés dans
   la réalité et actionnables mais qui ne sont pas viables sur le long terme ou
   alors qui n’entrent pas en cohérence avec les objectifs et la stratégie de
@@ -345,16 +341,7 @@ Le manque d’intérêt et même quelquefois le rejet par les designers du manag
 </h2>
 {% citationsmarginales "BLUM, Guillaume; COVA Véronique. Le design management en discussion.
 <em>Sciences du design n°7 : Design Management</em>. Presses Universitaires de
-France, 2018, p.21-27" %}
-Le management est généralement orienté vers les questions d’efficience, là
-    où le design se tourne vers celles touchant à la conception créative.[…]
-    Pourtant, les approches centrées sur la gestion de l’innovation et des
-    connaissances tendent à montrer qu’elles ne s’opposent pas nécessairement.
-    Ainsi, l’activité innovante, génératrice de savoir, est souvent à la source
-    d’une plus grande efficacité. Mais aussi, une approche trop centrée sur les
-    indicateurs d’efficacité est une approche planant au-dessus du réel sans en
-    comprendre les enjeux. En fait, le design et le management, tel que chacun
-    devrait être exercé, se rencontrent dans leur approche concrète.
+France, 2018, p.21-27" %}Le management est généralement orienté vers les questions d’efficience, là où le design se tourne vers celles touchant à la conception créative.[…] Pourtant, les approches centrées sur la gestion de l’innovation et des connaissances tendent à montrer qu’elles ne s’opposent pas nécessairement. Ainsi, l’activité innovante, génératrice de savoir, est souvent à la source d’une plus grande efficacité. Mais aussi, une approche trop centrée sur les indicateurs d’efficacité est une approche planant au-dessus du réel sans en comprendre les enjeux. En fait, le design et le management, tel que chacun devrait être exercé, se rencontrent dans leur approche concrète.
 {% endcitationsmarginales %}
 <p>
   Prédire et planifier est une partie essentielle des sciences du management.
@@ -386,14 +373,7 @@ transformation du secteur de la santé, par le design, du NHS (Sécurité Social
 britannique). <em
 >Innovation organisationnelle &amp; transformation managériale par le design
 thinking</em
->. Paris : CreateSpace Independent Publishing Platform, 2011, p.10" %}
-Les consultants ont tendance à proposer des solutions rapides et
-    opérationnelles mais sans se rendre compte que ces solutions ne répondent
-    pas dans les faits à la véritable problématique. Ils mettent en œuvre leurs
-    idées trop rapidement, pour ensuite réaliser qu’elles ne sont finalement pas
-    pertinentes, et repassent du temps facturé à retravailler sur cette même
-    solution pour essayer de la rendre plus adaptée.
-{% endcitationsmarginales %}
+>. Paris : CreateSpace Independent Publishing Platform, 2011, p.10" %} Certains consultants ont tendance à proposer des solutions rapides et opérationnelles mais sans se rendre compte que ces solutions ne répondent pas dans les faits à la véritable problématique. Ils mettent en œuvre leurs idées trop rapidement, pour ensuite réaliser qu’elles ne sont finalement pas pertinentes, et repassent du temps facturé à retravailler sur cette même solution pour essayer de la rendre plus adaptée. {% endcitationsmarginales %}
 <p>
   Ainsi, face à l’imprévisibilité des projets et à un focus trop axé “solution”
   il est nécessaire :
@@ -417,15 +397,7 @@ Les consultants ont tendance à proposer des solutions rapides et
   transformation organisationnelle
 </h3>
 {% citationsmarginales "LOWE, Kristen. <em>Everyone is Building Something</em>. Extrait de la
-newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024]." %}
-Regardless of where you sit in an organization, if you’re in a role that
-    owns a project or program of any type (or a piece of one), you are working
-    on a product. Your customers might be your coworkers, and you probably call
-    your product development lifecycle a change management or project management
-    framework. But regardless of how you describe it, your work still involves
-    picking, designing, testing, and launching something for someone else to
-    use. Kind of sounds like product development, no?
-{% endcitationsmarginales %}
+newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024]." %}Regardless of where you sit in an organization, if you’re in a role that owns a project or program of any type (or a piece of one), you are working on a product. Your customers might be your coworkers, and you probably call your product development lifecycle a change management or project management framework. But regardless of how you describe it, your work still involves picking, designing, testing, and launching something for someone else to use. Kind of sounds like product development, no?{% endcitationsmarginales %}
 <p>
   Dans le secteur de la transformation organisationnelle, nous sommes peu
   habitués à considérer l’objet de notre travail comme un <em>produit</em>. En
@@ -433,11 +405,7 @@ Regardless of where you sit in an organization, if you’re in a role that
   diagnostic ou un plan d’action stratégique, la posture commune est plutôt
   celle d’un <em>travailleur de la connaissance</em>
 
-  {% citationsmarginales "Le terme <em>travailleur de la connaissance</em> désigne un employé dont le
-  travail consiste à développer et utiliser du savoir en back office plutôt que
-  de produire des marchandises ou des services. Celui-ci est apparu en premier
-  dans l’ouvrage The Landmarks of Tomorrow (1959) de Peter Drucker ‘knowledge
-  work’" %}{% endcitationsmarginales %} 
+{% citationsmarginales "Le terme <em>travailleur de la connaissance</em> désigne un employé dont le travail consiste à développer et utiliser du savoir en back office plutôt que de produire des marchandises ou des services. Celui-ci est apparu en premier dans l’ouvrage The Landmarks of Tomorrow (1959) de Peter Drucker ‘knowledge work’" %}{% endcitationsmarginales %} 
 qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter
   le <em>mode produit</em> confère de nombreux avantages à un projet, et c’est
   ce que nous allons détailler ci-dessous. Mais qu’est-ce que le
