img ajoutee dans l'essai

--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
@@ -21,6 +21,12 @@ eleventyComputed:
 ---
 
 <div data-page="macouverture">
+  <img
+          style="  margin-block: var(--rythme);
+; mix-blend-mode: luminosity;"
+          src="/img/design_de_services_transformation_organisationnelle.png"
+          alt="Photographie dégradée en ASCII de Sherman Fairchild qui rend visite au centre de R&D de l'entreprise Fairchild avec Gordon Moore et Robert Noyce, 1965"
+      />
   <p>
     Dans ses travaux fondateurs sur l’innovation, Schumpeter (1939) dissocie
     l’innovation des produits, des procédés et des marchés. Il explique que
