--- a/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
+++ b/src/essais/challenger-pratiques-transformation-organisationelle-par-le-design-de-services.njk
@@ -347,8 +347,7 @@ eleventyComputed:
 </h2>
 {% citationsmarginales "BLUM, Guillaume; COVA Véronique. Le design management en discussion.
 <em>Sciences du design n°7 : Design Management</em>. Presses Universitaires de
-France, 2018, p.21-27" %}Le management est généralement orienté vers les questions d’efficience, là où le design se tourne vers celles touchant à la conception créative.[…] Pourtant, les approches centrées sur la gestion de l’innovation et des connaissances tendent à montrer qu’elles ne s’opposent pas nécessairement. Ainsi, l’activité innovante, génératrice de savoir, est souvent à la source d’une plus grande efficacité. Mais aussi, une approche trop centrée sur les indicateurs d’efficacité est une approche planant au-dessus du réel sans en comprendre les enjeux. En fait, le design et le management, tel que chacun devrait être exercé, se rencontrent dans leur approche concrète.
-{% endcitationsmarginales %}
+France, 2018, p.21-27" %}Le management est généralement orienté vers les questions d’efficience, là où le design se tourne vers celles touchant à la conception créative.[…] Pourtant, les approches centrées sur la gestion de l’innovation et des connaissances tendent à montrer qu’elles ne s’opposent pas nécessairement. Ainsi, l’activité innovante, génératrice de savoir, est souvent à la source d’une plus grande efficacité. Mais aussi, une approche trop centrée sur les indicateurs d’efficacité est une approche planant au-dessus du réel sans en comprendre les enjeux. En fait, le design et le management, tel que chacun devrait être exercé, se rencontrent dans leur approche concrète.{% endcitationsmarginales %}
 <p>
   Prédire et planifier est une partie essentielle des sciences du management.
   Nous budgétisons, planifions les ressources, établissons tâche par tâche le
@@ -379,7 +378,7 @@ transformation du secteur de la santé, par le design, du NHS (Sécurité Social
 britannique). <em
 >Innovation organisationnelle &amp; transformation managériale par le design
 thinking</em
->. Paris : CreateSpace Independent Publishing Platform, 2011, p.10" %} Certains consultants ont tendance à proposer des solutions rapides et opérationnelles mais sans se rendre compte que ces solutions ne répondent pas dans les faits à la véritable problématique. Ils mettent en œuvre leurs idées trop rapidement, pour ensuite réaliser qu’elles ne sont finalement pas pertinentes, et repassent du temps facturé à retravailler sur cette même solution pour essayer de la rendre plus adaptée. {% endcitationsmarginales %}
+>. Paris : CreateSpace Independent Publishing Platform, 2011, p.10" %}Certains consultants ont tendance à proposer des solutions rapides et opérationnelles mais sans se rendre compte que ces solutions ne répondent pas dans les faits à la véritable problématique. Ils mettent en œuvre leurs idées trop rapidement, pour ensuite réaliser qu’elles ne sont finalement pas pertinentes, et repassent du temps facturé à retravailler sur cette même solution pour essayer de la rendre plus adaptée.{% endcitationsmarginales %}
 <p>
   Ainsi, face à l’imprévisibilité des projets et à un focus trop axé “solution”
   il est nécessaire :
@@ -403,7 +402,7 @@ thinking</em
   transformation organisationnelle
 </h3>
 {% citationsmarginales "LOWE, Kristen. <em>Everyone is Building Something</em>. Extrait de la
-newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024]." %}Regardless of where you sit in an organization, if you’re in a role that owns a project or program of any type (or a piece of one), you are working on a product. Your customers might be your coworkers, and you probably call your product development lifecycle a change management or project management framework. But regardless of how you describe it, your work still involves picking, designing, testing, and launching something for someone else to use. Kind of sounds like product development, no?{% endcitationsmarginales %}
+newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024].", "en" %}Regardless of where you sit in an organization, if you’re in a role that owns a project or program of any type (or a piece of one), you are working on a product. Your customers might be your coworkers, and you probably call your product development lifecycle a change management or project management framework. But regardless of how you describe it, your work still involves picking, designing, testing, and launching something for someone else to use. Kind of sounds like product development, no?{% endcitationsmarginales %}
 <p>
   Dans le secteur de la transformation organisationnelle, nous sommes peu
   habitués à considérer l’objet de notre travail comme un <em>produit</em>. En
@@ -449,8 +448,7 @@ qui analyse et qui confronte peu ses projections au terrain. Pourtant, adopter
   nécessaires.
 </p>
 {% citationsmarginales "LOWE, Kristen. <em>Everyone is Building Something</em>. Extrait de la
-newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024]." %}
-Those approaches often look like something I learned the uselessness of when
+newsletter <a href='https://workbravely.substack.com/p/everyone-is-building-something'>Work Bravely</a>. 2024. [consulté le 20 Juin 2024].", "en" %}Those approaches often look like something I learned the uselessness of when
 trying to benchmark org structures. When I began planning the reorg, I
 started with what felt like the intuitively correct first step: looking up
 other companies’ org structures. Two pizza rules, squad models, functional
@@ -461,8 +459,7 @@ of trying to find a “best practice.”[…] While it’s likely true that what
 “best practice” looks like in your industry is working for somebody
 somewhere, it is a dangerous telos for a builder. What works perfectly in
 one company can be a disaster in another. Even within one company, what
-works one year might not work the following.
-{% endcitationsmarginales %}
+works one year might not work the following.{% endcitationsmarginales %}
 <p>
   Également, en tant que praticiens organisationnels, nous passons beaucoup de
   temps à benchmarker et à scruter les “bonnes pratiques” d’organisations
@@ -562,8 +559,7 @@ works one year might not work the following.
   <em
     >Innovation organisationnelle &amp; transformation managériale par le
     design thinking</em
-  >. Paris : CreateSpace Independent Publishing Platform, 2011, p.83" %}
-  Le design s’efforce de caractériser les usages, les expériences, les
+  >. Paris : CreateSpace Independent Publishing Platform, 2011, p.83" %}Le design s’efforce de caractériser les usages, les expériences, les
   préférences. Il est par nature centré sur l’utilisateur et il a pour
   mission d’organiser ses solutions autour des individus et non pas autour
   des systèmes. Par opposition, l’innovation traditionnelle, qui
@@ -572,8 +568,7 @@ works one year might not work the following.
   tendance à être organisées autour d’elles-mêmes et à auto-justifier le
   système. Le design leur permettrait de réorganiser leur système autour des
   individus (c’est-à-dire des consommateurs et des salariés) pour le rendre
-  plus pertinent et donc efficace.
-{% endcitationsmarginales %}
+  plus pertinent et donc efficace.{% endcitationsmarginales %}
 </ol>
 <ol start="2" type="1">
   <li>
@@ -586,12 +581,7 @@ works one year might not work the following.
   {% citationsmarginales "BORJA DE MOZOTA, Brigitte. Quarante ans de recherche en design management :
   une revue de littérature et des pistes pour l’avenir.
   <em>Sciences du design n°7 : Design Management</em>. Presses Universitaires
-  de France, 2018, p.28-45" %}
-  Les entreprises ont une mission, une vision stratégique et des portfolios
-      mais ce sont aussi surtout des systèmes humains complexes dans lesquels
-      les compétences du designer pour observer, simplifier et rendre cohérent
-      se révèlent très utiles.
-{% endcitationsmarginales %}
+  de France, 2018, p.28-45" %}Les entreprises ont une mission, une vision stratégique et des portfolios mais ce sont aussi surtout des systèmes humains complexes dans lesquels les compétences du designer pour observer, simplifier et rendre cohérent se révèlent très utiles.{% endcitationsmarginales %}
   <li>S’assurer que la commande reflète bien les aspects profonds du problème
       grâce au questionnement de la problématique en avant-projet.
   </li>
@@ -640,11 +630,9 @@ works one year might not work the following.
 {% citationsmarginales "MARCHAL, Aurélie.
 <em
   >Ibid</em
->.p.65" %}
-Il conviendrait par conséquent d’observer de manière plus approfondie les
+>.p.65" %}Il conviendrait par conséquent d’observer de manière plus approfondie les
 arrangements déjà existants, les rapports sociaux établis, la manière dont
-les tâches sont effectuées réellement.
-{% endcitationsmarginales %}
+les tâches sont effectuées réellement.{% endcitationsmarginales %}
 <ul>
   <li>
     <strong>Des résultats tangibles dès le début du projet</strong> : l’approche
@@ -665,12 +653,10 @@ les tâches sont effectuées réellement.
 <em
   >Innovation organisationnelle &amp; transformation managériale par le design
   thinking</em
->. Paris : CreateSpace Independent Publishing Platform, 2011, p.86" %}
-Le prototypage a un fort pouvoir fédérateur, particulièrement lors de la
+>. Paris : CreateSpace Independent Publishing Platform, 2011, p.86" %}Le prototypage a un fort pouvoir fédérateur, particulièrement lors de la
     co-conception. Il est créateur et porteur de sens pour les gens qui l’ont
     conçu, mais aussi pour ceux à qui il s’adresse et qui le comprennent, ce qui
-    peut être un atout dans le cadre de la gestion du changement
-{% endcitationsmarginales %}
+    peut être un atout dans le cadre de la gestion du changement.{% endcitationsmarginales %}
 <ul>
   <li>
     <strong
@@ -696,12 +682,10 @@ Le prototypage a un fort pouvoir fédérateur, particulièrement lors de la
 {% citationsmarginales "MARCHAL, Aurélie.
 <em
   >Ibid</em
->.p.65" %}
-Le développement d’une innovation ne repose pas sur la qualité intrinsèque
+>.p.65" %}Le développement d’une innovation ne repose pas sur la qualité intrinsèque
     des inventions mais sur la capacité collective des acteurs à leur donner
     sens et usage. […] Les inventions doivent venir du corps social concerné
-    pour qu’elles puissent être transformées en innovation.
-{% endcitationsmarginales %}
+    pour qu’elles puissent être transformées en innovation.{% endcitationsmarginales %}
 <ul>
   <li>
     <strong
@@ -1317,11 +1301,11 @@ Le développement d’une innovation ne repose pas sur la qualité intrinsèque
 <h3 id="revues">Revues</h3>
 <p>
   AGENCE NATIONALE POUR L’AMELIORATION DES CONDITIONS DE TRAVAIL.
-  <a href="https://www.anact.fr/10-questions-sur-la-conduite-des-projets-de-transformation7"><em>10 questions sur la conduite de projets de transformation</em></a>. 2017.
+  <a href="https://www.anact.fr/10-questions-sur-la-conduite-des-projets-de-transformation7"><em>10 questions sur la conduite de projets de transformation</em></a>. 2017. [consulté le 1 Avril 2024]
 </p>
 <p>
   STEPHANE VIAL et ALAIN FINDELI.
-  <a href="https://www.anact.fr/10-questions-sur-la-conduite-des-projets-de-transformation7"><em>Sciences du design n°7 : Design management</em></a>. Montréal &amp; Paris :
+  <a href="https://shs.cairn.info/revue-sciences-du-design-2018-1?lang=fr"><em>Sciences du design n°7 : Design management</em></a>. Montréal &amp; Paris :
   Presses Universitaires de France. 2018. 
 <h3 id="articles">Articles</h3>
 <p>
@@ -1343,7 +1327,7 @@ Le développement d’une innovation ne repose pas sur la qualité intrinsèque
   <em>Service transformation : service design on steroid</em>. Initialement paru
   dans la revue consacrée au design de service :
   <a
-    href="https://www.google.com/url?sa=t&amp;source=web&amp;rct=j&amp;opi=89978449&amp;url=https://www.service-design-network.org/touchpoint&amp;ved=2ahUKEwiSmb6hh9aGAxUuTqQEHX1TDgUQFnoECBUQAQ&amp;usg=AOvVaw1oo7-sVqtykSbuUGuBggO_"
+    href="https://www.service-design-network.org/touchpoint"
     >Touchpoint—The Journal of Service Design</a
   >. 2011. [consulté le 22 Avril 2024]. Désormais disponible sur le site de <a href="https://liveworkstudio.com/insight/service-transformation-service-design-on-steroids/">Livework</a>.
 </p>
